playing with the design bones

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <title>Boppa pdx</title>
 </head>
 <body>
-  <img src="pix/boppa_logo.png" alt="boppa logo">
+  <img id="logo" src="pix/boppa_logo.png" alt="boppa logo">
+
+  <img src="pix/bg_gal.jpg" alt="background image of tomato galletes" id="bg_gal">
+  <img src="pix/bg_flower.jpg" alt="background image of plated salad with flowers" id="bg_flower">
+
+
+  <div id="top">
+    <div id="break_edge"></div>
+  </div>
+  <div id="bottom">
+
+  </div>
 </body>
 </html>
