--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
   <img src="pix/bg_gal.jpg" alt="background image of tomato galletes" id="bg_gal">
   <img src="pix/bg_flower.jpg" alt="background image of plated salad with flowers" id="bg_flower">
 
+  <section id="intro">
+    <p>Farm to table supper club using locally sourced ingredients from farms and vendors around the portland area</p>
+  </section>
 
   <div id="top">
     <div id="break_edge"></div>
+    
   </div>
   <div id="bottom">
 
