testing background fix on mobile

--- a/index.html
+++ b/index.html
@@ -4,25 +4,34 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="pix/favicon.ico">
   <link rel="stylesheet" href="lib/style.css">
   <title>Boppa pdx</title>
 </head>
-<body>
-  <img id="logo" src="pix/boppa_logo.png" alt="boppa logo">
 
+<!-- Layout stuff begin -->
   <img src="pix/bg_gal.jpg" alt="background image of tomato galletes" id="bg_gal">
   <img src="pix/bg_flower.jpg" alt="background image of plated salad with flowers" id="bg_flower">
-
-  <section id="intro">
-    <p>Farm to table supper club using locally sourced ingredients from farms and vendors around the portland area</p>
-  </section>
-
   <div id="top">
     <div id="break_edge"></div>
-    
   </div>
   <div id="bottom">
-
+    <div id="break_edge_bottom"></div>
   </div>
+<!-- Layout stuff end -->
+
+
+<body>
+  <header>
+    <img id="logo" src="pix/boppa_logo.png" alt="boppa logo">
+    <section id="intro">
+      <p>Farm to table supper club using locally sourced ingredients from farms and vendors around the portland area</p>
+    </section>
+  </header>
+  
+
+
 </body>
+
+
 </html>
