--- a/index.html
+++ b/index.html
@@ -8,29 +8,65 @@
   <link rel="stylesheet" href="lib/style.css">
   <title>Boppa pdx</title>
 </head>
-
+<body>
 <!-- Layout stuff begin -->
-  <img src="pix/bg_gal.jpg" alt="background image of tomato galletes" id="bg_gal">
+  <!-- <img src="pix/bg_gal.jpg" alt="background image of tomato galletes" id="bg_gal">
   <img src="pix/bg_flower.jpg" alt="background image of plated salad with flowers" id="bg_flower">
   <div id="top">
     <div id="break_edge"></div>
   </div>
   <div id="bottom">
     <div id="break_edge_bottom"></div>
-  </div>
+  </div> -->
+
+  
+  <!-- <img id="right_flower" src="pix/right_flower.png" alt="flower background"> -->
 <!-- Layout stuff end -->
 
 
-<body>
+
   <header>
     <img id="logo" src="pix/boppa_logo.png" alt="boppa logo">
-    <section id="intro">
-      <p>Farm to table supper club using locally sourced ingredients from farms and vendors around the portland area</p>
-    </section>
   </header>
-  
 
+  <img id="left_flower" src="pix/left_flower.png" alt="flower background">
 
+  <section id="intro">
+    <ul id="menu" class="back_visible">
+      <li>
+        <a href="/boppa_static">home</a>
+      </li>
+      <li>
+        <a href="menus.html">menus</a>
+      </li>
+      <li>
+        <a href="schedule.html">schedule</a>
+      </li>
+      <li>
+        <a href="contact.html">contact</a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/boppa503/"><img class="social" src="pix/insta.png" alt="instagram link"></a>
+      </li>
+    </ul>
+    <p class="back_visible">Farm to table supper club using locally sourced ingredients from farms and vendors around the portland area</p>
+
+    <div>
+      <form method="post" name="contact_form" action="email_form.php">
+        Your Name:
+        <input type="text" name="name">
+        Email Address:
+        <input type="email" name="email">
+        Message:
+        <textarea name="message"></textarea>
+        <input type="submit" value="Submit">
+    </form>
+    </div>
+  </section>
+
+  <footer>
+    <p>Created by <a href="https://cptmo.dev">cptmo.dev</a></p>
+  </footer>
 </body>
 
 
