got the email worked out

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   
   <!-- <img id="right_flower" src="pix/right_flower.png" alt="flower background"> -->
 <!-- Layout stuff end -->
-
-
+<script>
+	console.log(window.location.search);
+</script>
 
   <header>
     <img id="logo" src="pix/boppa_logo.png" alt="boppa logo">
