--- a/index.html
+++ b/index.html
@@ -73,8 +73,12 @@
         <a href="https://www.instagram.com/boppa503/"><img class="social" src="pix/insta.png" alt="instagram link"></a>
       </li>
     </ul>
-    <p class="back_visible">Farm to table supper club using locally sourced ingredients from farms and vendors around the portland area</p>
 
+    <br />
+    <br />
+    <h4 class="back_visible">Farm to table supper club using locally sourced ingredients from farms and vendors around the portland area</h4>
+
+    <p class="back_bisible">Our next event is coming! This Monday?</p>
 
   </section>
 
