always one little thing..

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <br />
     <h4 class="back_visible">Farm to table supper club using locally sourced ingredients from farms and vendors around the portland area</h4>
 
-    <p class="back_bisible">Our next event is coming! This Monday?</p>
+    <p class="back_visible">Our next event is coming! This Monday?</p>
 
   </section>
 
