--- a/menus.html
+++ b/menus.html
@@ -60,7 +60,7 @@
 
     <br />
     <br />
-    <h3>Menus from the past</h3>
+    <h3 class="back_visible">Menus from the past</h3>
     <p class="back_visible"><a href="menus/082122.pdf">08/21/2022</a></p>
     <p class="back_visible"><a href="menus/071022.pdf">07/10/2022</a></p>
     <p class="back_visible"><a href="menus/043022.pdf">04/30/2022</a></p>
