--- a/schedule.html
+++ b/schedule.html
@@ -60,7 +60,7 @@
 
     <br />
     <br />
-    <h3>Upcoming events</h3>
+    <h3 class="back_visible">Upcoming events</h3>
     <p class="back_visible">Monday?</p>
 
   </section>
