few touches before showing

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
       </li>
     </ul>
 
-    
+
 <div id="good_send" class="back_dark">
   <button class="close">X</button>
    <h3>Thank you for reaching out, I'll get back to you as soon as possible</h3>
@@ -41,7 +41,7 @@
     <img id="logo" src="pix/boppa_logo.png" alt="boppa logo">
   </header>
 
-  <img id="left_flower" src="pix/left_flower.png" alt="flower background">
+  <img id="left_flower" src="pix/left_flower_2.png" alt="flower background">
 
   <section id="intro">
     <ul id="menu" class="back_visible">
