--- a/schedule.html
+++ b/schedule.html
@@ -37,7 +37,7 @@
     <img id="logo" src="pix/boppa_logo.png" alt="boppa logo">
   </header>
 
-  <img id="left_flower" src="pix/left_flower_2.png" alt="flower background">
+  <img id="left_flower" src="pix/left_flower.png" alt="flower background">
 
   <section id="intro">
     <ul id="menu" class="back_visible">
