--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
     <p class="back_visible">Use the form below to send me a message if you're looking for catering or collaborating</p>
     <div id="form_container" class="back_dark">
       <!--      <form method="post" name="contact_form" action="email_form.php"> -->
-      <form method="post" name="contact" id="contact_form" data-netlify="true">
+      <form method="post" name="contact_form" id="contact_form" data-netlify="true">
         name
         <input type="text" name="name">
         email *
